# scribe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scribe/: config.py  daily_note.py  main.py  meeting_note.py  new_note.py  utils.py
scripts/: release.sh
